# Sentiment-Analysis

./: .gitignore  config.ini  google_news_scraper.py  pyproject.toml  tw-scrapy.py  tw-sentiment.py  twitterapi.py
data/: main.py  train.csv  tweet.csv  tweets_main.csv  tweets_main.json  tweets_main_sentiment.csv  valid.csv
googlenews/: main.py  pygooglenews.py  workingfile.py
models/: sklearn_model.joblib
notebooks/: analysis.ipynb  fine_tuned_model.ipynb  tfidf_complex_model.ipynb  tfidf_logistic_regression_model.ipynb  train_transformer.py
scripts/: data_visualization.py  metrics.py  training.py
twitter/: context.json  main.py  tweets_main.csv
utils/: add_sentiment.py  json_to_csv.py
