[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Viraj Shah <viraj.v.shah03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38.2"
scipy = "^1.12.0"
pandas = "^2.2.1"
feedparser = "^6.0.11"
dateparser = "^1.2.0"
tweepy = "^4.14.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
scikit-learn = "^1.4.2"
joblib = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
